--- a/Makefile.gpu_d
+++ b/Makefile.gpu_d
@@ -1,2 +1,8 @@
-FC=nvfortran -mp -byteswapio -Mlarge_arrays -fast -acc=gpu -Minfo=accel,all,intensity,ccff -gpu=lineinfo -O3 -Mcuda -DUSE_STACK
+#FC=nvfortran -mp -byteswapio -Mlarge_arrays -fast -acc=gpu -Minfo=accel,all,intensity,ccff -gpu=lineinfo -O3 -Mcuda -DUSE_STACK
+
+FC=/home/gmap/mrpm/khatib/public/bin/mimpifc-18.0.5.274 \
+  -I. -shared-intel -convert big_endian -assume byterecl \
+  -align array64byte,all -traceback -fpic -qopenmp -qopenmp-threadprivate compat -fp-model source -qopt-report=5 \
+  -qopt-report-phase=vec -ftz -diag-disable=remark,cpu-dispatch -g -O2 -march=core-avx2 -finline-functions \
+  -finline-limit=500 -Winline -qopt-prefetch=4 -fast-transcendentals -fimf-use-svml -no-fma 
 
