--- a/Makefile.gpu_nvhpc_d
+++ b/Makefile.gpu_nvhpc_d
@@ -1,2 +1,2 @@
-FC=nvfortran -byteswapio -Mlarge_arrays -fast -acc=gpu -Minfo=accel,all,intensity,ccff -gpu=lineinfo -O3 -Mcuda -DUSE_STACK
+FC=nvfortran -byteswapio -Mlarge_arrays -fast -acc=gpu -Minfo=accel,all,intensity,ccff -gpu=lineinfo -O3 -Mcuda -DUSE_STACK -DARCH="'$(ARCH)'"
 
